# YearOneOfHell

./: README.md
Algebra/: Readme.txt
Uvod v programiraneto/domashna1/: 2.cpp
UvodVprogramiraneto/domashna1/: 1.cpp
UvodVprogramiraneto/domashna2/: proba.cxx
UvodVprogramiraneto/domashna3/: copyOfedno.cpp  edno.cpp
sem1/: README.md  infoS1.md
sem1/Algebra/: Readme.txt
sem1/UvodVprogramiraneto/domashna1/: 3.cpp
sem1/UvodVprogramiraneto/domashna2/: 1.cpp
sem2/Eai/: polezno.txt
sem2/OOP/lekciiSem/: mart10Unit.txt
sem2/OOP/papka/: a.out  lib.cpp  lib.h  main.cpp  masivBezElementi.cpp  swapProject  zadachki1.cpp
sem2/OOP/pract/april03/: Book.cpp  a.out  classString.cxx  knigaSruct  studentenClassen.cpp
sem2/OOP/pract/pract13mart/: a.out  basicIOstream.cpp  binaryStreams.cpp  otherText.txt  someText.txt
sem2/OOP/pract/pract20mart/: functions.cpp  tests.cpp
sem2/OOP/pract/pract2zad2/: a.out  arrFuncs.h  arrfunc.cpp  main.cpp
sem2/OOP/pract/pract2zad3/lib/: CMakeLists.txt  mathlib.cpp  mathlib.h
sem2/OOP/pract/pract2zad3/proj/: CMakeLists.txt  main.cpp
sem2/OOP/pract/pract3zad/: a.out  output.txt  zadachki.cpp
sem2/OOP/seminar/: mart5.cpp
sem2/OOP/seminar/april02/: stack.cxx
sem2/OOP/seminar/april09/: AvlTree.cpp
sem2/OOP/seminar/mart19/: a.out  info.txt  plqs.cpp
sem2/angliiski/: angl.txt
